--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vee-validate/rules": "^4.15.0",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "firebase": "^11.2.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vee-validate": "^4.15.0",
