--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
     "@vee-validate/rules": "^4.15.0",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
