--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "jest": "^27.0.5",
-    "vue-cli-plugin-tailwind": "^3.0.0"
+    "vue-cli-plugin-tailwind": "^3.0.0",
+    "webpack": "^5.97.1"
   }
 }
