--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "firebase": "^11.2.0",
+    "howler": "^2.2.4",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vee-validate": "^4.15.0",
