--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.2.0",
     "howler": "^2.2.4",
     "postcss": "^8",
+    "register-service-worker": "^1.7.2",
     "tailwindcss": "^3",
     "vee-validate": "^4.15.0",
     "vue": "^3.2.13",
@@ -32,6 +33,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
