--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "firebase": "^11.2.0",
     "howler": "^2.2.4",
+    "nprogress": "^0.2.0",
     "postcss": "^8",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "^3",
